// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useResponsive > between > should render properly for %p between 320/xs sm 1`] = `
<div>
  <h1>
    xs
  </h1>
</div>
`;

exports[`useResponsive > between > should render properly for %p between 400/sm md 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive > between > should render properly for %p between 568/sm md 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive > between > should render properly for %p between 768/md lg 1`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;

exports[`useResponsive > between > should render properly for %p between 1024/lg xl 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive > custom breakpoints > should render properly for %p between 320/small medium 1`] = `
<div>
  <h1>
    small
  </h1>
</div>
`;

exports[`useResponsive > custom breakpoints > should render properly for %p between 568/small medium 1`] = `
<div>
  <h1>
    small
  </h1>
</div>
`;

exports[`useResponsive > custom breakpoints > should render properly for %p between 768/medium large 1`] = `
<div>
  <h1>
    medium
  </h1>
</div>
`;

exports[`useResponsive > custom breakpoints > should render properly for %p between 1024/medium large 1`] = `
<div>
  <h1>
    medium
  </h1>
</div>
`;

exports[`useResponsive > custom breakpoints > should render properly for %p between 1280/medium large 1`] = `null`;

exports[`useResponsive > max > should render properly for %p with %p 360 sm 1`] = `
<div>
  <h1>
    xs
  </h1>
</div>
`;

exports[`useResponsive > max > should render properly for %p with %p 568 md 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive > max > should render properly for %p with %p 568 sm 1`] = `null`;

exports[`useResponsive > max > should render properly for %p with %p 800 lg 1`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;

exports[`useResponsive > max > should render properly for %p with %p 800 md 1`] = `null`;

exports[`useResponsive > max > should render properly for %p with %p 1100 lg 1`] = `null`;

exports[`useResponsive > max > should render properly for %p with %p 1100 xl 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive > max > should render properly for %p with %p 1280 xl 1`] = `null`;

exports[`useResponsive > min > should render properly for %p with %p and %p 320 xs landscape 1`] = `null`;

exports[`useResponsive > min > should render properly for %p with %p and %p 320 xs portrait 1`] = `
<div>
  <h1>
    xs
  </h1>
</div>
`;

exports[`useResponsive > min > should render properly for %p with %p and %p 400 sm landscape 1`] = `null`;

exports[`useResponsive > min > should render properly for %p with %p and %p 400 sm portrait 1`] = `
<div>
  <h1>
    sm
  </h1>
</div>
`;

exports[`useResponsive > min > should render properly for %p with %p and %p 768 md landscape 1`] = `null`;

exports[`useResponsive > min > should render properly for %p with %p and %p 768 md portrait 1`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;

exports[`useResponsive > min > should render properly for %p with %p and %p 1024 lg landscape 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive > min > should render properly for %p with %p and %p 1024 lg portrait 1`] = `null`;

exports[`useResponsive > min > should render properly for %p with %p and %p 1280 xl landscape 1`] = `
<div>
  <h1>
    xl
  </h1>
</div>
`;

exports[`useResponsive > min > should render properly for %p with %p and %p 1280 xl portrait 1`] = `null`;

exports[`useResponsive > resize > should update the matcher with a window.resize 1`] = `
<div>
  <h1>
    lg
  </h1>
</div>
`;

exports[`useResponsive > resize > should update the matcher with a window.resize 2`] = `
<div>
  <h1>
    md
  </h1>
</div>
`;
